2005-01-08  Geoff Norton  <gnorton@customerdna.com>

        * XplatUIOSX.cs: Fix GetWindowState & SetWindowState

2005-01-07  Jackson Harper  <jackson@ximian.com>

	* TreeNode.cs: Just update the single node when it is
	checked. Don't refresh after toggling, the Expand/Collapse already
	handles this.
	* TreeView.cs: Respect clipping a little more when drawing. Try
	not to redraw things that don't need to be redrawn. Just hide the
	scrollbars when they are no longer needed instead of removing
	them, so they don't have to be created again and again.
	
2005-01-07  Geoff Norton  <gnorton@customerdna.com>

	* XplatUIOSX.cs (SetCaretPos):  We need to translate the view
	coordinates to window space to place the caret properly, FIXED.
	Implement GetWindowState & SetWindowState

2005-01-06  Peter Bartok <pbartok@novell.com>

	* Form.cs:
	  - Implemented ClientSize property
	  - Implemented DesktopBounds property
	  - Implemented DesktopLocation property
	  - Implemented IsRestrictedWindow property
	  - Implemented Size property
	  - Implemented TopLevel property
	  - Implemented FormWindowState property
	* Control.cs:
	  - Implemented GetTopLevel() method
	  - Implemented SetTopLevel() method
	* X11Structs.cs (Atom):
	  - Added AnyPropertyType definition
	  - Added MapState definiton and updated XWindowAttribute struct
	* XplatUI.cs: Added GetWindowState() and SetWindowState() methods
	* XplatUIDriver.cs: Added GetWindowState() and SetWindowState() methods
	* XplatUIOSX.cs: Stubbed GetWindowState() and SetWindowState() methods
	* XplatUIWin32.cs:
	  - Implemented GetWindowState() and SetWindowState() methods
	  - Fixed Win32GetWindowLong return type
	* XplatUIX11.cs:
	  - Introduced central function for sending NET_WM messages
	  - Implemented GetWindowState() and SetWindowState() methods
	* TextBoxBase.cs (set_Lines):
	  - Now uses Foreground color for text added via Text property (Duh!)
	  - Added code to remember programmatically requested size (fixes 